style: amended element widths and heights to set values, previous values were causing overflow issues.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
 /* Default values */
+
+
 *{
   box-sizing: border-box;
   margin: 0;
@@ -21,14 +23,15 @@ body{
 .control-interface{
   position: relative;
   margin: 5px 5px 0px 5px;
-  max-width: 400px;
-  aspect-ratio: 8 / 1;
+  width: 300px;
+  height: 50px;
   padding: 2.5px;
   background-color: rgb(130, 130, 130);
   border: 2px solid rgb(40, 40, 40);
   border-radius: 5px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  align-items: center;
 
 }
 .control-interface div{
@@ -39,8 +42,8 @@ body{
 
 /* Playback Block */
 .input-playback{
-  height: 100%;
-  aspect-ratio: 1 / 1;
+  width: 35px;
+  height: 35px;
 }
 .input-playback div{
   width: 100%;
@@ -61,10 +64,11 @@ body{
 
 /* Tempo Block */
 .tempo-block{
-  max-width: 140px;
+  width: 130px;
+  height: 35px;
   padding: 5px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 .tempo-block label{
@@ -72,14 +76,13 @@ body{
   margin: 2.5px;
 }
 .tempo-block input{
-  width: 45px;
+  width: 40px;
   margin: 2.5px;
   text-align: center;
 }
 .tempo-refresh{
+  width: 22.5px;
   height: 22.5px;
-  aspect-ratio: 1 / 1;
-  margin: 2px;
   background-color: white;
   border: 2px solid rgb(40, 40, 40);;
   border-radius: 5px;
@@ -94,7 +97,8 @@ body{
 
 /* Kit Block */
 .kit-block{
-  width: 130px;
+  width: 110px;
+  height: 35px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -111,9 +115,9 @@ body{
 /* Tab Navigation Section */
 .tab-section{
   position: relative;
-  margin: 0px 5px 0px 5px;
-  max-width: 400px;
-  aspect-ratio: 10 / 1;
+  margin: 10px 5px 0px 5px;
+  width: 300px;
+  height: 35px;
   display: flex;
   justify-content: space-around;
 }
@@ -126,23 +130,23 @@ body{
   border-bottom: none;
   border-radius: 5px 5px 0px 0px;  
   text-align: center;
-  padding: 2.5px;
+  padding: 5px;
 }
 .drum-tab{
   left: 0%;
-  top: 3px;  
+  top: 2px;  
   z-index: 2;
   background-color: rgb(130, 130, 130);
 }
 .share-tab{
   left: 33.75%;
-  top: 3px;
+  top: 2px;
   z-index: 0;
   background-color: rgb(110, 110, 110);
 }
 .info-tab{
   right: 0%;
-  top: 3px;
+  top: 2px;
   z-index: 0;
   background-color: rgb(110, 110, 110);
 }
@@ -154,7 +158,7 @@ body{
   justify-content: space-around;
   z-index: 1;
   margin: 0px 5px 10px 5px;
-  max-width: 400px;
+  width: 300px;
   height: 350px;
   padding: 2.5px;
   background-color: rgb(130, 130, 130);
@@ -235,7 +239,7 @@ body{
   justify-content: center;
   align-items: center;
   margin: 0px 5px 10px 5px;
-  max-width: 400px;
+  width: 300px;
   height: 350px;
   padding: 2.5px;
   background-color: rgb(130, 130, 130);
@@ -311,10 +315,11 @@ body{
   justify-content: space-around;
   z-index: 1;
   margin: 0px 5px 10px 5px;
-  max-width: 400px;
+  width: 300px;
   height: 350px;
   padding: 2.5px;
   background-color: rgb(130, 130, 130);
   border: 2px solid rgb(40, 40, 40);
   border-radius: 0px 0px 5px 5px;
+  text-align: center;
 }
